[project]
name = "gemma4"
version = "0.1.0"
description = "Video analysis with Qwen 3.5 4B on Apple Silicon (MLX)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mlx-vlm>=0.4.3",
    "mlx>=0.22.0",
    "torch; sys_platform == 'darwin'",
    "torchvision; sys_platform == 'darwin'",
    "opencv-python-headless",
]
